src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.boxes-container {
  width: 100%;
  display: flex;
  flex-direction:column;
  align-self: flex-start;
  justify-items: flex-start;
  margin-top: 100px;
}

.boxes-header {
  display: flex;
  flex-direction:row;
  position: absolute;
  top: 0%;
  width: 100%;
}

.card-body {
  display: flex;
  flex-direction: column;
}

.card {
  width: 400px;
}

.clock {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 0 auto;
  padding: 0.375rem;
  width: 100%;
  font-size: 5vw;
  font-weight: bold;
  width: 90%;
  font-size-adjust:inherit;
}

.clock.over {
  color: rgb(228, 100, 100);
}

.clockPart {
  width: 1;
  font-size-adjust: true;
}

.clockSpacer {
  margin-left: 30px;
  margin-right: 30px;
}

.card-img-top {
  width: 100%; height: 300px; object-fit: contain;
}

.admin-controls {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.admin-horizontal {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 30px;
  gap: 50px;
  align-items: center;
  justify-content: center;
}

.admin-header {
  position: fixed;
  top: 5%;
}

.map-header {
  position: fixed;
  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding-left: 30px;
  padding-right: 30px;
  align-items: center;
  justify-content: center;
}

.btn.success {
  background-color: #88E788;
  color: black;
}

.btn.success:hover {
  background-color: #88E788;
  color: black;
}

.btn.failure {
  background-color: rgb(228, 100, 100);
  color: black;
}

.btn.failure:hover {
  background-color: rgb(228, 100, 100);
  color: black;
}

.card-body {
  padding: 10px;
}

.nav-btn {
  margin-top: -10px;
}

.edit-boxes {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
  padding: 20px;
}

.add-btn {
  width: 150px;
  height: 50px;
  font-size: 20px;
  justify-self: center;
}

.interest-btn {
  margin-top: auto;
}

.set-timer {
  justify-content: center;
  align-items: center;
  align-self: center;
}

.offcanvas {

}

